<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2021 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_battery_configuration_troubleshoot_description_1"
        android:layout_marginTop="6dp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_battery_configuration_troubleshoot_description_2"
        android:layout_marginTop="4dp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_battery_configuration_troubleshoot_description_3"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_battery_configuration_troubleshoot_description_4"
        android:layout_marginTop="4dp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_battery_configuration_troubleshoot_description_5"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating_feedback_email"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white" />

</LinearLayout>